@@ -1,3 +1,10 @@
+2009-11-24  Rafael Avila de Espindola  <espindola@google.com>
+
+	* incremental.cc (Incremental_inputs_header,
+	Incremental_inputs_header_write, Incremental_inputs_entry,
+	Incremental_inputs_entry_write): Update comment about which
+	type has the filed descriptions.
+
 2009-11-15  Doug Kwan  <dougkwan@google.com>
 
 	* arm.cc (Target_arm::may_use_arm_nop): New method definition.
